# photo_meta

./: .gitignore  pyproject.toml  secrets.yaml
photo_meta/: docs.py  fix.py  scan.py  utils.py
tests/: test_photo_meta.py
