[tool.poetry]
name = "photo_meta"
version = "0.1.0"
description = ""
authors = ["villoro7 <villoro7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
exif = "^1.3.5"
tqdm = "^4.64.0"
loguru = "^0.6.0"
pydantic = "^1.9.1"
vdropbox = "^0.2.7"
vcrypto = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
